--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -45,8 +45,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Study\CloneableTest.cs" />
+    <Compile Include="Study\CultureInfoTest.cs" />
     <Compile Include="Study\EnumTest.cs" />
     <Compile Include="Study\ExplicitImplicitTest.cs" />
+    <Compile Include="Study\ListTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
