--- a/TestObject/TestObject.csproj
+++ b/TestObject/TestObject.csproj
@@ -50,7 +50,9 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ByteConverterTest.cs" />
     <Compile Include="ExtensionLinquTest.cs" />
+    <Compile Include="LeapTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
