--- a/PrismMefPluginManager/packages.config
+++ b/PrismMefPluginManager/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
   <package id="Prism.Core" version="6.0.1" targetFramework="net45" />
+  <package id="Prism.Mef" version="6.0.1" targetFramework="net45" />
   <package id="Prism.Wpf" version="6.0.1" targetFramework="net45" />
 </packages>
