--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -37,6 +37,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.DirectoryServices.AccountManagement" />
     <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -48,9 +49,12 @@
     <Compile Include="IStudyTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Study\AppConfigTest.cs" />
+    <Compile Include="Study\AwaitAsych.cs" />
     <Compile Include="Study\Bezpieczenstwo2.cs" />
     <Compile Include="Study\Bezpieczeństwo.cs" />
     <Compile Include="Study\ByteConverter.cs" />
+    <Compile Include="Study\RoleManager.cs" />
     <Compile Include="Study\StackOverflow.cs" />
     <Compile Include="Study\TikTakTou.cs" />
     <Compile Include="Study\CloneableTest.cs" />
