--- a/WebMvcStudy/WebMvcStudy.csproj
+++ b/WebMvcStudy/WebMvcStudy.csproj
@@ -107,6 +107,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\DictionaryCreator.cs" />
     <Compile Include="Controllers\FirstController.cs" />
+    <Compile Include="EditField.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
