--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
+  <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
   <package id="NSoup" version="0.8.0" targetFramework="net45" />
   <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
 </packages>
