--- a/ProgramingStudy/App.config
+++ b/ProgramingStudy/App.config
@@ -1,6 +1,19 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
+  <configSections>
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+   
+  </configSections>
+  <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
+    <session-factory>
+      <property name="dialect">NHibernate.Dialect.SQLiteDialect</property>
+      <property name="connection.connection_string">Data Source=studyBaza;Version=3</property>
+      <property name="show_sql">true</property>
+      <mapping assembly="ProgramingStudy" />
+    </session-factory>
+  </hibernate-configuration>
+ 
+  
+  
 </configuration>
