--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.0.0" targetFramework="net46" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
   <package id="NSoup" version="0.8.0" targetFramework="net45" />
   <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
+  <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net46" />
 </packages>
