--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -87,7 +87,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="IStudyTest.cs" />
+    <Compile Include="Study\Base64Test.cs" />
     <Compile Include="Study\InformationsFromSystem.cs" />
+    <Compile Include="Study\LanguageStudy\AtributesStudy.cs" />
+    <Compile Include="Study\LanguageStudy\Inheritance.cs" />
     <Compile Include="Study\NHbiernateTableDto.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
