--- a/ColorPreview/ColorPreview.csproj
+++ b/ColorPreview/ColorPreview.csproj
@@ -69,6 +69,8 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\Color.cs" />
+    <Compile Include="Model\UserSettings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
