--- a/ColorPreview/ColorPreview.csproj
+++ b/ColorPreview/ColorPreview.csproj
@@ -56,6 +56,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="ExampleOfConvert.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModel\ColorViewModel.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
