--- a/ColorPreview/ColorPreview.csproj
+++ b/ColorPreview/ColorPreview.csproj
@@ -57,6 +57,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="CloseAppKey.cs" />
     <Compile Include="ColorToColorConverter.cs" />
     <Compile Include="ExampleOfConvert.cs" />
     <Compile Include="Properties\Annotations.cs" />
