--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -125,6 +125,7 @@
     <Compile Include="Study\ProsteTypy.cs" />
     <Compile Include="Study\QuickSort.cs" />
     <Compile Include="Study\RoleManager.cs" />
+    <Compile Include="Study\Serialization.cs" />
     <Compile Include="Study\StackOverflow.cs" />
     <Compile Include="Study\SuperFolders.cs" />
     <Compile Include="Study\ThinkInterview.cs" />
