--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -53,6 +53,10 @@
       <HintPath>packages\Iesi.Collections.4.0.0.4000\lib\net40\Iesi.Collections.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="NHibernate, Version=4.0.0.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>packages\NHibernate.4.0.4.4000\lib\net40\NHibernate.dll</HintPath>
       <Private>True</Private>
@@ -125,6 +129,7 @@
     <Compile Include="Study\ProsteTypy.cs" />
     <Compile Include="Study\QuickSort.cs" />
     <Compile Include="Study\RoleManager.cs" />
+    <Compile Include="Study\SerializationJSON.cs" />
     <Compile Include="Study\Serialization.cs" />
     <Compile Include="Study\SoupEnvelopeCreator.cs" />
     <Compile Include="Study\StackOverflow.cs" />
