--- a/ProgramingStudyTests/ProgramingStudyTests.csproj
+++ b/ProgramingStudyTests/ProgramingStudyTests.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="KataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validators_Tests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
