--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -4,6 +4,7 @@
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
+  <package id="NLog" version="4.3.10" targetFramework="net46" />
   <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net46" />
   <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net46" />
