--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -119,6 +119,7 @@
     <Compile Include="Study\LanguageStudy\C6News.cs" />
     <Compile Include="Study\LanguageStudy\DacInterview.cs" />
     <Compile Include="Study\LanguageStudy\FlagsStudy.cs" />
+    <Compile Include="Study\LanguageStudy\GenericType.cs" />
     <Compile Include="Study\LanguageStudy\Inheritance.cs" />
     <Compile Include="Study\LanguageStudy\ListSpeedStudy.cs" />
     <Compile Include="Study\MazowiaConverterFromTuxedo.cs" />
