--- a/ProgramingStudy/App.config
+++ b/ProgramingStudy/App.config
@@ -1,10 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+
+  
+  
+  
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
    
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  
   </configSections>
+
+
+
+  <connectionStrings>
+    <add name="ProgramingStudy" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ProgramingStudy;MultipleActiveResultSets=true;Integrated Security=True" providerName="System.Data.SqlClient" />
+  </connectionStrings>
+  
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
     <session-factory>
       <property name="dialect">NHibernate.Dialect.SQLiteDialect</property>
