--- a/ProgramingStudy/App.config
+++ b/ProgramingStudy/App.config
@@ -7,13 +7,18 @@
   <configSections>
     <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-   
+    <section name="ReportsPdfMarginsDataSection" type="ProgramingStudy.ReportsPdfMarginsDataSection, ProgramingStudy" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   
   </configSections>
 
-
+  <ReportsPdfMarginsDataSection>
+    <ReportPdfMarginElement>
+      <add name="BlatCoorDepartment" top="15" bottom="12" left="10" right="10" />
+      <add name="BlatChangesCoorDepartment" top="15" bottom="12" left="10" right="10" />
+    </ReportPdfMarginElement>
+  </ReportsPdfMarginsDataSection>
 
   <connectionStrings>
     <add name="ProgramingStudy" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ProgramingStudy;MultipleActiveResultSets=true;Integrated Security=True" providerName="System.Data.SqlClient" />
