--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -112,6 +112,7 @@
     <Compile Include="Study\EntityFrameworkStudy.cs" />
     <Compile Include="Study\EnvironmentLogger.cs" />
     <Compile Include="Study\FizzBuzz.cs" />
+    <Compile Include="Study\Helper.cs" />
     <Compile Include="Study\IBanNumber.cs" />
     <Compile Include="Study\InformationsFromSystem.cs" />
     <Compile Include="Study\Kata\BinaryChop.cs" />
