--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -6,6 +6,7 @@
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
   <package id="NLog" version="4.3.10" targetFramework="net46" />
   <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
+  <package id="SSH.NET" version="2016.0.0" targetFramework="net46" />
   <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net46" />
   <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net46" />
   <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net46" />
