--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.0.0" targetFramework="net46" />
   <package id="FluentFTP" version="16.3.0" targetFramework="net46" />
   <package id="Iesi.Collections" version="4.0.0.4000" targetFramework="net45" />
+  <package id="LiteDB" version="3.1.0" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net46" />
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
   <package id="NLog" version="4.3.10" targetFramework="net46" />
