--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -112,6 +112,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppConfigStudy.cs" />
+    <Compile Include="BCCHelpers\Lidero.cs" />
     <Compile Include="BCCHelpers\TableRecordGenerator.cs" />
     <Compile Include="IStudyTest.cs" />
     <Compile Include="LinquStudy.cs" />
