--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -13,4 +13,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net46" />
   <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net46" />
   <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net46" />
 </packages>
