--- a/ProgramingStudy/App.config
+++ b/ProgramingStudy/App.config
@@ -1,27 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
   
   
   
   <configSections>
-    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate" />
+    <section name="hibernate-configuration" type="NHibernate.Cfg.ConfigurationSectionHandler, NHibernate"/>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="ReportsPdfMarginsDataSection" type="ProgramingStudy.ReportsPdfMarginsDataSection, ProgramingStudy" />
+    <section name="ReportsPdfMarginsDataSection" type="ProgramingStudy.ReportsPdfMarginsDataSection, ProgramingStudy"/>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   
   </configSections>
 
   <ReportsPdfMarginsDataSection>
     <ReportPdfMarginElement>
-      <add name="BlatCoorDepartment" top="15" bottom="12" left="10" right="10" />
-      <add name="BlatChangesCoorDepartment" top="15" bottom="12" left="10" right="10" />
+      <add name="BlatCoorDepartment" top="15" bottom="12" left="10" right="10"/>
+      <add name="BlatChangesCoorDepartment" top="15" bottom="12" left="10" right="10"/>
     </ReportPdfMarginElement>
   </ReportsPdfMarginsDataSection>
 
   <connectionStrings>
-    <add name="ProgramingStudy" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ProgramingStudy;MultipleActiveResultSets=true;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ProgramingStudy" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=ProgramingStudy;MultipleActiveResultSets=true;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   
   <hibernate-configuration xmlns="urn:nhibernate-configuration-2.2">
@@ -29,14 +29,14 @@
       <property name="dialect">NHibernate.Dialect.SQLiteDialect</property>
       <property name="connection.connection_string">Data Source=studyBaza;Version=3</property>
       <property name="show_sql">true</property>
-      <mapping assembly="ProgramingStudy" />
+      <mapping assembly="ProgramingStudy"/>
     </session-factory>
   </hibernate-configuration>
  
   
   
 <system.serviceModel>
-        <bindings />
-        <client />
+        <bindings/>
+        <client/>
     </system.serviceModel>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
