--- a/ProgramingStudy/packages.config
+++ b/ProgramingStudy/packages.config
@@ -8,10 +8,11 @@
   <package id="NHibernate" version="4.0.4.4000" targetFramework="net45" />
   <package id="NLog" version="4.3.10" targetFramework="net46" />
   <package id="PDFsharp" version="1.32.3057.0" targetFramework="net45" />
+  <package id="RestSharp" version="105.2.3" targetFramework="net45" />
   <package id="SSH.NET" version="2016.0.0" targetFramework="net46" />
   <package id="System.Data.SQLite" version="1.0.101.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net46" />
-  <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net46" />
+  <package id="System.Data.SQLite.Core" version="1.0.101.0" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Data.SQLite.EF6" version="1.0.101.0" targetFramework="net46" requireReinstallation="true" />
+  <package id="System.Data.SQLite.Linq" version="1.0.101.0" targetFramework="net46" requireReinstallation="true" />
   <package id="System.ValueTuple" version="4.3.1" targetFramework="net46" />
 </packages>
