--- a/ProgramingStudyTests/ProgramingStudyTests.csproj
+++ b/ProgramingStudyTests/ProgramingStudyTests.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Class1.cs" />
+    <Compile Include="Job\PZLStructureTests.cs" />
     <Compile Include="KataTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestInternalClass.cs" />
