--- a/ProgramingStudy/NLog.config
+++ b/ProgramingStudy/NLog.config
@@ -6,7 +6,7 @@
     <target name="file"
      xsi:type="File"
      layout="${longdate} [${threadid}] ${level:uppercase=true} ${message} ${exception:format=tostring}"
-     fileName="${basedir}/logs/log.txt"
+     fileName="${basedir}/logs/${shortdate}.log"
      archiveFileName="${basedir}/logs/log.{#####}.txt"
      archiveAboveSize="10485760"
      archiveNumbering="Sequence"
