--- a/ProgramingStudy/ProgramingStudy.csproj
+++ b/ProgramingStudy/ProgramingStudy.csproj
@@ -194,8 +194,10 @@
     <Compile Include="Study\C7\C71Features.cs" />
     <Compile Include="Study\C7\C72Features.cs" />
     <Compile Include="Study\C7\C73Features.cs" />
+    <Compile Include="Study\DurationStudy.cs" />
     <Compile Include="Study\Exam01.cs" />
     <Compile Include="Study\ExecuteAttribute.cs" />
+    <Compile Include="Study\ienumerableStudy.cs" />
     <Compile Include="Study\JsonWithHtml.cs" />
     <Compile Include="Study\LinquStudy.cs" />
     <Compile Include="LiteDB\Entity.cs" />
